--- a/css/digitization.css
+++ b/css/digitization.css
@@ -80,12 +80,15 @@ header {
         overflow: hidden; }
         header .header-top .header-top-left ul li {
           float: left;
-          border-right: 1px solid #008582; }
+          border-right: 1px solid #008582;
+          line-height: 20px; }
           header .header-top .header-top-left ul li a {
             padding-left: 12px;
-            padding-right: 12px; }
+            padding-right: 12px;
+            line-height: 20px; }
           header .header-top .header-top-left ul li:first-child a {
-            padding-left: 0; }
+            padding-left: 0;
+            line-height: 20px; }
           header .header-top .header-top-left ul li:last-child {
             border: none; }
     header .header-top .header-top-right {
@@ -110,10 +113,12 @@ header {
           width: 21px;
           height: 21px; }
           header .header-top .header-top-right ul li:first-child {
+            cursor: pointer;
             padding-right: 10px;
             border-right: 1px solid #008582;
             background: url("../img/xj.png") no-repeat; }
           header .header-top .header-top-right ul li:last-child {
+            cursor: pointer;
             margin-left: 10px;
             background: url("../img/fdj.png") no-repeat; }
     header .header-top button {
@@ -171,7 +176,7 @@ footer {
   footer ul {
     overflow: hidden;
     margin: auto;
-    width: 786px;
+    width: 625px;
     margin-top: 20px; }
     footer ul li {
       float: left;
@@ -236,6 +241,12 @@ footer {
 ::-webkit-scrollbar-thumb:window-inactive {
   background: #008582; }
 
+.nomore {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center; }
+
 .digization:after {
   display: block;
   content: '';
@@ -289,10 +300,11 @@ footer {
     .digization .digization-list .digization-list-item ul .digization-list-item-infor {
       width: 543px;
       height: 174px;
-      margin-left: 45px; }
+      margin-left: 15px; }
       .digization .digization-list .digization-list-item ul .digization-list-item-infor div h1 {
         font-size: 18px;
         line-height: 22px;
+        font-weight: normal;
         padding-bottom: 5px; }
       .digization .digization-list .digization-list-item ul .digization-list-item-infor div h2 {
         font-size: 12px;
