--- a/css/digitization.scss
+++ b/css/digitization.scss
@@ -69,11 +69,12 @@
         .digization-list-item-infor {
           width:543px;
           height:174px;
-          margin-left:45px;
+          margin-left:15px;
           div {
             h1{
               font-size:18px;
               line-height:22px;
+              font-weight: normal;
               padding-bottom: 5px;
             }
             h2{
