--- a/template/Wiki.html
+++ b/template/Wiki.html
@@ -1,1 +1,8 @@
-<p>文物百科</p>
+<div class="waiting">
+    <img src="img/waiting1.png" alt="">
+    <img src="img/waiting2.png" alt="" style="margin-top:80px;">
+    <ul>
+        <li><button ng-click="gobackInex()">返回首页</button></li>
+        <li><button ng-click="gobackpage()">返回上一页</button></li>
+    </ul>
+</div>
