--- a/template/footer.html
+++ b/template/footer.html
@@ -3,18 +3,15 @@
 </p>
 <ul>
     <li>
-        <a href="">国家文物局</a>
+        <a href="http://www.sach.gov.cn/" target="_blank">国家文物局</a>
     </li><li>
-        <a href="">山东省文物局</a>
+        <a href="http://www.sdww.gov.cn/" target="_blank">山东省文物局</a>
     </li><li>
-        <a href="">中国文物信息咨询中心</a>
+        <a href="http://www.cchicc.org.cn/" target="_blank">中国文物信息咨询中心</a>
     </li><li>
-        <a href="">山东省博物馆</a>
+        <a href="http://www.sdmuseum.com/default.aspx" target="_blank">山东省博物馆</a>
     </li><li>
-        <a href="http://www.baidu.com">山东省博物馆协会</a>
-    </li><li>
-        <a href="">中国文物信息咨询中心</a>
-    </li>
+        <a href="http://www.chinamuseum.org.cn/index.html" target="_blank">山东省博物馆协会</a>
 </ul>
 <p style="padding-top:22px;">
     <span style="font-size:12px;color:rgba(0,0,0,.7)">
