--- a/template/register.html
+++ b/template/register.html
@@ -118,7 +118,7 @@
         </div>
         <div class="register-tips register-tips-piccode">
             <span>
-                 <i class="error"></i><u>获取短信验证码前请先填写图形验证码</u>
+                 <u>获取短信验证码前请先填写图形验证码</u>
             </span>
         </div>
         <!--短信验证码-->
