--- a/css/collection.scss
+++ b/css/collection.scss
@@ -19,10 +19,10 @@
         border: 1px solid #ddd;
         text-align: center;
         margin-left: 10px;
+        padding:0 10px;
         small {
           font-size: 12px;
           line-height: 24px;
-          padding-left: 10px;
         }
         u {
           font-size: 12px;
@@ -35,7 +35,6 @@
           font-style: normal;
           line-height: 24px;
           padding-left: 10px;
-          padding-right: 10px;
           &:hover {
             color: $theme-color-active;
             cursor: pointer;
@@ -86,12 +85,15 @@
         float: left;
         width: 21px;
         height: 21px;
+
         &:first-child {
+          cursor: pointer;
           padding-right: 10px;
           border-right: 1px solid $theme-color;
           background: url("../img/xj.png") no-repeat;
         }
         &:last-child {
+          cursor: pointer;
           margin-left: 10px;
           background: url("../img/fdj.png") no-repeat;
         }
@@ -260,7 +262,7 @@
           display: inline-block;
           position: absolute;
           right: 3px;
-          bottom: 9px;
+          bottom: 17px;
           float: right;
           width: 15px;
           height: 15px;
@@ -485,3 +487,5 @@
   width:100%;
   height:100%;
 }
+
+
