--- a/css/common.scss
+++ b/css/common.scss
@@ -30,12 +30,15 @@ header {
         li {
           float: left;
           border-right: 1px solid $theme-color;
+          line-height: 20px;
           a {
             padding-left: 12px;
             padding-right: 12px;
+            line-height: 20px;
           }
           &:first-child a {
             padding-left: 0;
+            line-height: 20px;
           }
           &:last-child {
             border: none;
@@ -66,11 +69,13 @@ header {
           width: 21px;
           height: 21px;
           &:first-child {
+            cursor: pointer;
             padding-right: 10px;
             border-right: 1px solid $theme-color;
             background: url("../img/xj.png") no-repeat;
           }
           &:last-child {
+            cursor: pointer;
             margin-left: 10px;
             background: url("../img/fdj.png") no-repeat;
           }
@@ -150,7 +155,7 @@ footer {
   ul {
     overflow: hidden;
     margin: auto;
-    width: 786px;
+    width: 625px;
     margin-top: 20px;
     li {
       float: left;
@@ -238,4 +243,12 @@ footer {
 
 ::-webkit-scrollbar-thumb:window-inactive {
   background:$theme-color;
+}
+//没有搜索到内容提示
+.nomore{
+  display:flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+
 }
