--- a/css/index.css
+++ b/css/index.css
@@ -80,12 +80,15 @@ header {
         overflow: hidden; }
         header .header-top .header-top-left ul li {
           float: left;
-          border-right: 1px solid #008582; }
+          border-right: 1px solid #008582;
+          line-height: 20px; }
           header .header-top .header-top-left ul li a {
             padding-left: 12px;
-            padding-right: 12px; }
+            padding-right: 12px;
+            line-height: 20px; }
           header .header-top .header-top-left ul li:first-child a {
-            padding-left: 0; }
+            padding-left: 0;
+            line-height: 20px; }
           header .header-top .header-top-left ul li:last-child {
             border: none; }
     header .header-top .header-top-right {
@@ -110,10 +113,12 @@ header {
           width: 21px;
           height: 21px; }
           header .header-top .header-top-right ul li:first-child {
+            cursor: pointer;
             padding-right: 10px;
             border-right: 1px solid #008582;
             background: url("../img/xj.png") no-repeat; }
           header .header-top .header-top-right ul li:last-child {
+            cursor: pointer;
             margin-left: 10px;
             background: url("../img/fdj.png") no-repeat; }
     header .header-top button {
@@ -171,7 +176,7 @@ footer {
   footer ul {
     overflow: hidden;
     margin: auto;
-    width: 786px;
+    width: 625px;
     margin-top: 20px; }
     footer ul li {
       float: left;
@@ -236,6 +241,12 @@ footer {
 ::-webkit-scrollbar-thumb:window-inactive {
   background: #008582; }
 
+.nomore {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center; }
+
 .wrapper {
   padding-bottom: 14px; }
 
@@ -273,7 +284,7 @@ footer {
     float: right;
     font-size: 12px;
     margin-right: 27px;
-    line-height: 40px; }
+    line-height: 15px; }
 
 .section {
   padding: 30px 56px 0 54px;
@@ -285,26 +296,35 @@ footer {
       .section .section-layout-left .section-content1 ul li {
         overflow: hidden;
         margin-bottom: 14px; }
-        .section .section-layout-left .section-content1 ul li .new-img-content {
-          margin-top: 7px; }
+        .section .section-layout-left .section-content1 ul li .index_display_url {
+          display: block;
+          width: 100%;
+          height: 18px;
+          line-height: 18px;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap; }
         .section .section-layout-left .section-content1 ul li div {
           float: left; }
+          .section .section-layout-left .section-content1 ul li div .index_display_url {
+            color: rgba(0, 0, 0, 0.8); }
+            .section .section-layout-left .section-content1 ul li div .index_display_url:hover {
+              text-decoration: underline; }
           .section .section-layout-left .section-content1 ul li div strong {
             font-weight: normal;
             font-size: 14px; }
-            .section .section-layout-left .section-content1 ul li div strong a {
-              color: rgba(0, 0, 0, 0.8); }
-              .section .section-layout-left .section-content1 ul li div strong a:hover {
-                text-decoration: underline; }
           .section .section-layout-left .section-content1 ul li div p {
-            margin-top: 15px;
-            font-style: italic;
-            color: #008582; }
+            margin-top: 8px;
+            color: #008582;
+            font-size: 12px; }
             .section .section-layout-left .section-content1 ul li div p small {
-              padding: 0 15px 0 0; }
+              padding: 0 15px 0 0;
+              font-size: 12px; }
+            .section .section-layout-left .section-content1 ul li div p span {
+              font-size: 12px; }
           .section .section-layout-left .section-content1 ul li div h6 {
             height: 34px;
-            margin-top: 10px;
+            margin-top: 5px;
             font-weight: normal;
             font-size: 12px;
             display: -webkit-box;
@@ -343,6 +363,10 @@ footer {
         margin: 0 40px 38px 0; }
         .section .section-layout-right .section-content2 ul li div {
           float: left; }
+          .section .section-layout-right .section-content2 ul li div .ablum-title {
+            margin: 0px;
+            width: 162px;
+            text-align: center; }
           .section .section-layout-right .section-content2 ul li div h3 {
             font-weight: normal;
             font-size: 14px; }
@@ -372,11 +396,13 @@ footer {
               background: #ea703a; }
 
 .virtual-enter {
-  font-family: "Microsoft YaHei UI";
+  display: inline-block;
+  line-height: 20px;
   outline: none;
   width: 60px;
   height: 20px;
-  font-size: 12px;
+  text-align: center;
+  font-size: 14px;
   margin-top: 10px;
   border: 1px solid #ea703a;
   border-radius: 4px;
@@ -388,7 +414,7 @@ footer {
     background: #ea703a; }
 
 .swiper-container {
-  width: 1020px;
+  width: 995px;
   height: auto; }
 
 .swiper-button-prev {
