--- a/css/login.scss
+++ b/css/login.scss
@@ -134,6 +134,7 @@
           margin-left:50px;
           outline:none;
           border:none;
+          cursor: pointer;
           background:$theme-color-active;
           width:254px;
           height:38px;
