--- a/css/register.scss
+++ b/css/register.scss
@@ -86,6 +86,7 @@
       }
     }
     .register-submit{
+      cursor: pointer;
         width:254px;
         height:38px;
         background:#aaa;
