--- a/template/digitization.html
+++ b/template/digitization.html
@@ -3,7 +3,7 @@
     <p class="breadcrumb">
         <a ui-sref="home">首页</a><u>&gt;&gt;</u><a ui-sref="digitization">数字展厅</a><u ng-show="conditions.orgId">&gt;&gt;</u><span ng-show="conditions.orgId" ng-bind="museum"></span>
     </p>
-    <div class="digization-tab">
+    <div class="digization-tab" ng-if="!showData">
         <ul ng-show="showTab">
             <li ng-class="{active:tabpage==1}" ng-click="changeTab(1)">最新</li>
             <li ng-class="{active:tabpage==2}" ng-click="changeTab(2)">最热</li>
@@ -26,5 +26,6 @@
                 </li>
             </ul>
         </li>
+        <nohavemore nheight="680" nwidth="1117" ng-if="showData"></nohavemore>
     </ul><div class="PagePlugs" style="margin:30px 0;"></div>
 </div>
