--- a/template/header.html
+++ b/template/header.html
@@ -15,7 +15,7 @@
             <li>
                 <input type="file" style="width:21px;height:21px;opacity: 0;overflow: hidden;">
             </li>
-            <li></li>
+            <li ng-click="gocollection()"></li>
         </ul>
     </div>
     <button ng-click="goback($event)"><a>信息管理平台</a></button >
@@ -30,9 +30,9 @@
             <li><a ui-sref="museum.museumMap" ui-sref-active="mainactive">博物馆</a></li>
             <li><a ui-sref="display({museum:''})" ui-sref-active="mainactive">展览</a></li>
             <li><a ui-sref="digitization({museum:'',id:''})" ui-sref-active="mainactive">数字展厅</a></li>
-            <li><a ui-sref="collection({museum:'',type:''})" ui-sref-active="mainactive">藏品</a></li>
-            <!--<li><a ui-sref="Wiki" ui-sref-active="mainactive">文物百科</a></li>-->
-            <li><a>文物百科</a></li>
+            <li><a ui-sref="collection({museum:'',type:'',keywords:'',id:''})" ui-sref-active="mainactive">藏品</a></li>
+            <li><a ui-sref="Wiki" ui-sref-active="mainactive">文物百科</a></li>
+            <!--<li><a>文物百科</a></li>-->
         </ul>
     </nav>
 </div>
